# foxar

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  deny.toml
.github/ISSUE_TEMPLATE/: BUG-FORM.yml  FEATURE-FORM.yml  config.yml
.github/workflows/: build.yml  (+6 more)
abi/: Cargo.toml  README.md  build.rs
abi/abi/: HEVM.sol
abi/src/: lib.rs
abi/src/bindings/: console.rs  hardhat_console.rs  hevm.rs
anvil/: Cargo.toml  README.md
anvil/core/: Cargo.toml
anvil/core/src/: types.rs
anvil/core/src/eth/: block.rs  mod.rs  proof.rs  receipt.rs  state.rs  subscription.rs  trie.rs  utils.rs
anvil/core/src/eth/transaction/: ethers_compat.rs  mod.rs
binder/: Cargo.toml  README.md  build.rs
binder/src/: lib.rs  utils.rs
cast/: Cargo.toml
chisel/: Cargo.toml  README.md
cli/: Cargo.toml  README.md  build.rs
cli/assets/: CounterTemplate.s.sol  CounterTemplate.sol  CounterTemplate.t.sol  workflowTemplate.yml
cli/benches/: probe.rs  spark_test.rs
cli/src/: cast.rs  handler.rs  probe.rs  spark.rs  stdin.rs  utils.rs
cli/src/cmd/: mod.rs  retry.rs  utils.rs
cli/src/cmd/cast/: access_list.rs  bind.rs  call.rs  create2.rs  estimate.rs  find_block.rs  interface.rs  logs.rs  run.rs  send.rs  storage.rs
cli/src/cmd/cast/wallet/: mod.rs  vanity.rs
cli/src/cmd/forge/: bind.rs  cache.rs  coverage.rs  create.rs  debug.rs  flatten.rs  fmt.rs  fourbyte.rs  init.rs  inspect.rs  install.rs  selectors.rs  snapshot.rs  tree.rs
cli/src/cmd/forge/geiger/: mod.rs  visitor.rs
cli/src/cmd/forge/script/: artifacts.rs  broadcast.rs  build.rs  cmd.rs  executor.rs  mod.rs  multi.rs  providers.rs  receipts.rs  runner.rs  sequence.rs  transaction.rs  verify.rs
cli/src/cmd/forge/test/: filter.rs  mod.rs
cli/src/cmd/forge/verify/: mod.rs  provider.rs  sourcify.rs
cli/src/cmd/forge/verify/etherscan/: flatten.rs  mod.rs  standard_json.rs
cli/src/cmd/probe/: access_list.rs  bind.rs  call.rs  create2.rs  estimate.rs  find_block.rs  interface.rs  logs.rs  mod.rs  rpc.rs  run.rs  send.rs  storage.rs
cli/src/cmd/probe/wallet/: mod.rs  vanity.rs
cli/src/cmd/spark/: bind.rs  cache.rs  config.rs  coverage.rs  create.rs  debug.rs  doc.rs  flatten.rs  fmt.rs  fourbyte.rs  init.rs  inspect.rs  install.rs  mod.rs  remappings.rs  remove.rs  selectors.rs  snapshot.rs  tree.rs  update.rs  watch.rs
cli/src/cmd/spark/geiger/: error.rs  find.rs  mod.rs  visitor.rs
cli/src/cmd/spark/script/: broadcast.rs  build.rs  cmd.rs  executor.rs  mod.rs  multi.rs  providers.rs  receipts.rs  runner.rs  sequence.rs  transaction.rs  verify.rs
cli/src/cmd/spark/test/: filter.rs  mod.rs
cli/src/cmd/spark/verify/: mod.rs  provider.rs  sourcify.rs
cli/src/cmd/spark/verify/etherscan/: flatten.rs  mod.rs  standard_json.rs
cli/src/opts/: cast.rs  chain.rs  dependency.rs  ethereum.rs  forge.rs  mod.rs  network.rs  probe.rs  spark.rs  transaction.rs
cli/src/opts/wallet/: mod.rs  multi_wallet.rs
cli/test-utils/: Cargo.toml
cli/test-utils/src/: lib.rs  macros.rs  script.rs  util.rs
cli/tests/fixtures/: ScriptVerify.sol  can_build_skip_contracts.stdout  can_build_skip_glob.stdout  can_check_snapshot.stdout  can_create_template_contract.stdout  can_create_using_unlocked-2nd.stdout  can_create_using_unlocked.stdout  can_detect_dirty_git_status_on_init.stderr  can_execute_script_and_skip_contracts.stdout  can_execute_script_command.stdout  can_execute_script_command_fqn.stdout  can_execute_script_command_with_args.stdout  can_execute_script_command_with_returned.stdout  can_execute_script_command_with_sig.stdout  can_run_test_in_custom_test_folder.stdout  can_test_repeatedly.stdout  can_use_libs_in_multi_fork.stdout  cast_logs.stdout  runs_tests_exactly_once_with_changed_versions.0.8.13.stdout  runs_tests_exactly_once_with_changed_versions.1.1.0.stdout  sign_typed_data.json  suggest_when_no_tests_match.stdout  warn_no_tests.stdout  warn_no_tests_match.stdout
cli/tests/it/: cache.rs  cast.rs  cmd.rs  config.rs  create.rs  doc.rs  integration.rs  main.rs  multi_script.rs  probe.rs  script.rs  svm.rs  test_cmd.rs  utils.rs  verify.rs  yvm.rs
common/: Cargo.toml  README.md
common/src/: abi.rs  calc.rs  compile.rs  constants.rs  contracts.rs  evm.rs  fmt.rs  lib.rs  provider.rs  selectors.rs  shell.rs  term.rs  traits.rs  transactions.rs
config/: Cargo.toml  README.md
config/src/: cache.rs  chain.rs  doc.rs  error.rs  etherscan.rs  fix.rs  fmt.rs  fuzz.rs  invariant.rs  lib.rs  macros.rs  network.rs  resolve.rs  utils.rs  warning.rs
config/src/inline/: conf_parser.rs  mod.rs  natspec.rs
config/src/providers/: remappings.rs
doc/: Cargo.toml  README.md
evm/: Cargo.toml
fmt/: Cargo.toml  README.md
fmt/src/: comments.rs  formatter.rs  inline_config.rs  lib.rs
fmt/src/solang_ext/: ast_eq.rs
fmt/testdata/InlineDisable/: fmt.sol  original.sol
fmt/testdata/LiteralExpression/: fmt.sol  original.sol  preserve-quote.fmt.sol  single-quote.fmt.sol
fmt/testdata/Repros/: fmt.sol  original.sol
fmt/testdata/RevertStatement/: fmt.sol  original.sol
fmt/tests/it/: formatter.rs
forge/: Cargo.toml  README.md
foundryup/: foundryup
foxarup/: README.md  foxarup  install
macros/: Cargo.toml
macros/impl/: Cargo.toml
macros/impl/src/: utils.rs
macros/src/: lib.rs
macros/src/fmt/: console_fmt.rs  token.rs  ui.rs
orbitalisup/: README.md  install  orbitalisup
pilot/: Cargo.toml  README.md
pilot/assets/: preview.tape
pilot/benches/: session_source.rs
pilot/src/: cmd.rs  dispatcher.rs  executor.rs  history.rs  lib.rs  runner.rs  session.rs  session_source.rs  solidity_helper.rs
pilot/tests/: cache.rs
probe/: Cargo.toml  README.md
shuttle/: Cargo.toml  README.md
spark/: Cargo.toml  README.md
spark/src/: coverage.rs  gas_report.rs  lib.rs  multi_runner.rs  result.rs  runner.rs
spark/tests/it/: cheats.rs  config.rs  core.rs  fork.rs  fs.rs  fuzz.rs  inline.rs  invariant.rs  repros.rs  test_helpers.rs
testdata/: README.md  foundry.toml
ui/: Cargo.toml
ui/src/: lib.rs
utils/: Cargo.toml  README.md
utils/src/: abi.rs  error.rs  lib.rs  rpc.rs  types.rs
(+376 files in other folders)
