[workspace]
members = [
    "anvil",
    "anvil/core",
    "anvil/rpc",
    "anvil/server",
    "abi",
    "binder",
    "cast",
    "chisel",
    "cli",
    "cli/test-utils",
    "common",
    "config",
    "doc",
    "evm",
    "fmt",
    "forge",
    "macros",
    "macros/impl",
    "ui",
    "utils",
]
resolver = "2"

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much
debug = 0

# These speed up local tests
[profile.dev.package.corebc-ylem]
opt-level = 3

[profile.dev.package.revm]
opt-level = 3

# These speed up all forge script related integration tests
[profile.test.package.axum]
opt-level = 3

# Local "release" mode, more optimized than dev but much faster to compile than release
[profile.local]
inherits = "dev"
opt-level = 3
# Set this to 1 or 2 to get more useful backtraces
debug = 0
panic = 'unwind'
# better recompile times
incremental = true
codegen-units = 16

[profile.release]
# Optimize for binary size, but keep loop vectorization
opt-level = "s"
# Performance optimizations
lto = "fat"
debug = 0
strip = true
panic = "abort"
codegen-units = 1

[workspace.dependencies]
corebc = { git = "https://github.com/core-coin/corebc-rs.git", default-features = false, branch = "main" }
corebc-addressbook = { git = "https://github.com/core-coin/corebc-rs.git", default-features = false, branch = "main" }
corebc-core = { git = "https://github.com/core-coin/corebc-rs.git", default-features = false, branch = "main" }
corebc-contract = { git = "https://github.com/core-coin/corebc-rs.git", default-features = false, branch = "main" }
corebc-contract-abigen = { git = "https://github.com/core-coin/corebc-rs.git", default-features = false, branch = "main" }
corebc-providers = { git = "https://github.com/core-coin/corebc-rs.git", default-features = false, branch = "main" }
corebc-signers = { git = "https://github.com/core-coin/corebc-rs.git", default-features = false, branch = "main" }
corebc-middleware = { git = "https://github.com/core-coin/corebc-rs.git", default-features = false, branch = "main" }
corebc-blockindex = { git = "https://github.com/core-coin/corebc-rs.git", default-features = false, branch = "main" }
corebc-ylem = { git = "https://github.com/core-coin/corebc-rs.git", default-features = false, branch = "main" }

solang-parser = "=0.3.0"

