[workspace]
members = [
    "shuttle",
    "shuttle/core",
    "shuttle/rpc",
    "shuttle/server",
    "abi",
    "binder",
    "probe",
    "pilot",
    "cli",
    "cli/test-utils",
    "common",
    "config",
    "doc",
    "evm",
    "fmt",
    "spark",
    "macros",
    "macros/impl",
    "ui",
    "utils",
]
resolver = "2"

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much
debug = 0

# These speed up local tests
[profile.dev.package.corebc-ylem]
opt-level = 3

[profile.dev.package.revm]
opt-level = 3

# Local "release" mode, more optimized than dev but much faster to compile than release
[profile.local]
inherits = "dev"
opt-level = 3
# Set this to 1 or 2 to get more useful backtraces
debug = 0
panic = 'unwind'
# better recompile times
incremental = true
codegen-units = 16

[profile.release]
# Optimize for binary size, but keep loop vectorization
opt-level = "s"
# Performance optimizations
lto = "fat"
debug = 0
strip = true
panic = "abort"
codegen-units = 1

[workspace.dependencies]
corebc = { git = "https://github.com/core-coin/corebc-rs.git", default-features = false }
corebc-addressbook = { git = "https://github.com/core-coin/corebc-rs.git", default-features = false }
corebc-core = { git = "https://github.com/core-coin/corebc-rs.git", default-features = false }
corebc-contract = { git = "https://github.com/core-coin/corebc-rs.git", default-features = false }
corebc-contract-abigen = { git = "https://github.com/core-coin/corebc-rs.git", default-features = false }
corebc-providers = { git = "https://github.com/core-coin/corebc-rs.git", default-features = false }
corebc-signers = { git = "https://github.com/core-coin/corebc-rs.git", default-features = false }
corebc-blockindex = { git = "https://github.com/core-coin/corebc-rs.git", default-features = false } 
corebc-ylem = { git = "https://github.com/core-coin/corebc-rs.git", default-features = false }
revm = { git = "https://github.com/core-coin/cvm.git", default-features = false }
solang-parser = "=0.3.0"

