[package]
name = "foxar-abi"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Foxar's Ylem ABI bindings"
repository = "https://github.com/foxar-rs/foxar"
exclude = ["abi", "build.rs"]

[build-dependencies]
corebc-contract-abigen = { workspace = true}
eyre = "0.6"
syn = "2.0"

[dependencies]
foxar-macros = { path = "../macros" }

corebc-core = { workspace = true}
corebc-contract = { workspace = true, features = ["abigen"]}
corebc-providers = { workspace = true}
