[package]
name = "foxar-binder"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "./README.md"
description = "Generate rust bindings for solidity projects"
repository = "https://github.com/foxar-rs/foxar"
keywords = ["ethereum", "web3", "solidity"]

[dependencies]
foxar-config = { path = "../config" }
corebc-ylem = { workspace = true, features = ["async", "yvm-ylem", "project-util"]}
corebc-contract = { workspace = true, features = ["abigen"]}
curl = { version = "0.4", default-features = false, features = ["http2"] }
eyre = "0.6"
git2 = { version = "0.17", default-features = false }
url = "2"
tracing = "0.1"
tempfile = "3"
