[package]
name = "foxar-cli"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/foxar-rs/foxar"
keywords = ["ethereum", "web3"]

[build-dependencies]
vergen = { version = "8", default-features = false, features = ["build", "git", "git2"] }

[dependencies]
# foxar internal
spark-fmt = { path = "../fmt" }
spark-doc = { path = "../doc" }
foxar-utils = { path = "../utils" }
spark = { path = "../spark" }
foxar-config = { path = "../config" }
foxar-common = { path = "../common" }
foxar-evm = { path = "../evm" }
probe = { path = "../probe" }
ui = { path = "../ui" }

# eth
corebc = {workspace = true, features = ["rustls", "ws", "ipc"]}
solang-parser.workspace = true

# cli
clap = { version = "4", features = ["derive", "env", "unicode", "wrap_help"] }
clap_complete = "4"
clap_complete_fig = "4"
yansi = "0.5"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "fmt"] }
tracing = "0.1"
console = "0.15"
watchexec = "2"
watchexec-events = "=1.0.0"
watchexec-signals = "=1.0.0"
is-terminal = "0.4"
comfy-table = "6"
reqwest = { version = "0.11", default-features = false, features = [
  "json",
  "rustls",
  "rustls-tls-native-roots",
] }
dotenvy = "0.15"
dialoguer = { version = "0.10", default-features = false }

# async / parallel
tokio = { version = "1", features = ["macros"] }
futures = "0.3"
rayon = "1"
async-trait = "0.1"

# disk / paths
walkdir = "2"
dunce = "1"
path-slash = "0.2"
tempfile = "3"

# misc
eyre = "0.6"
color-eyre = "0.6"
rustc-hex = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = { version = "1", default-features = false }
rpassword = "7"
hex = "0.4"
itertools = "0.10"
proptest = "1"
semver = "1"
once_cell = "1"
similar = { version = "2", features = ["inline"] }
strsim = "0.10"
bytes = "1.4"
strum = { version = "0.25", features = ["derive"] }
thiserror = "1"
indicatif = "0.17"
parking_lot = "0.12"

[dev-dependencies]
shuttle = { path = "../shuttle" }
foxar-utils = { path = "./../utils" }
foxar-cli-test-utils = { path = "./test-utils" }
pretty_assertions = "1"
toml = "0.7"
serial_test = "2"
criterion = "0.4"
yvm = { package = "yvm-rs", git = "https://github.com/core-coin/yvm-rs.git", default-features = false, features = ["rustls"] }
globset = "0.4"

[features]
default = ["rustls"]
rustls = ["corebc/rustls"]
openssl = ["corebc/openssl"]

# feature for integration tests that test external projects
external-integration-tests = []

[[bin]]
name = "probe"
path = "src/probe.rs"
doc = false

[[bin]]
name = "spark"
path = "src/spark.rs"
doc = false

[[bench]]
name = "spark_test"
harness = false

[[bench]]
name = "probe"
harness = false
