[package]
name = "foxar-common"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Common utilities for Foxar's tools"
repository = "https://github.com/bchainhub/foxar"

[dependencies]
# foxar internal
foxar-config = { path = "../config" }
foxar-macros = { path = "../macros" }

# eth
corebc-core = { workspace = true}
corebc-ylem = { workspace = true}
corebc-providers = { workspace = true}
corebc-blockindex = { workspace = true, features = ["corebc-ylem"]}

# io
reqwest = { version = "0.11", default-features = false }

# cli
clap = { version = "4", features = ["derive", "env", "unicode", "wrap_help"] }
comfy-table = "6"
tracing = "0.1"
is-terminal = "0.4"
yansi = "0.5"
tempfile = "3"

#  misc
auto_impl = "1.1.0"
serde = "1"
serde_json = "1"
thiserror = "1"
eyre = "0.6"
walkdir = "2"
semver = "1"
once_cell = "1"
dunce = "1"
regex = "1"
globset = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
