[package]
name = "foxar-config"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Foxar configuration"
repository = "https://github.com/foxar-rs/foxar"
readme = "README.md"

[dependencies]
# eth
corebc-core = { workspace = true}
corebc-ylem = { workspace = true, features = ["async", "yvm-ylem"]}
corebc-blockindex = { workspace = true}

# formats
Inflector = "0.11"
figment = { version = "0.10", features = ["toml", "env"] }
number_prefix = "0.4"
serde = { version = "1", features = ["derive"] }
serde_regex = "1"
serde_json = "1"
toml = { version = "0.7", features = ["preserve_order"] }
toml_edit = "0.19"

# dirs
dirs-next = "2"
globset = "0.4"
walkdir = "2"

# misc
eyre = "0.6"
regex = "1"
semver = { version = "1", features = ["serde"] }
tracing = "0.1"
once_cell = "1"
thiserror = "1"
reqwest = { version = "0.11", default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
path-slash = "0.2.1"

[dev-dependencies]
pretty_assertions = "1"
figment = { version = "0.10", features = ["test"] }
tempfile = "3"
