[package]
name = "spark-fmt"
version = "0.2.0"
edition = "2021"
description = "Foxar's solidity formatting and linting support"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/bchainhub/foxar"
keywords = ["ethereum", "web3", "solidity", "linter"]

[dependencies]
# foxar dep
foxar-config = { path = "../config" }

corebc-core = { workspace = true}

# parser
solang-parser.workspace = true

# misc
semver = "1"
itertools = "0.10"
thiserror = "1"
ariadne = "0.2"
tracing = "0.1"

[dev-dependencies]
pretty_assertions = "1"
itertools = "0.10"
toml = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
