[package]
name = "orbitalis-macros"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/orbitalis-rs/orbitalis"

[dependencies]
orbitalis-macros-impl = { path = "./impl" }

corebc-core = { workspace = true}
serde = "1.0"
serde_json = "1.0"
