[package]
name = "pilot"
version = "0.1.1"
edition = "2021"
authors = [
  "clabby <https://github.com/clabby>",
  "asnared <https://github.com/abigger87>",
]
description = "Solidity REPL"
repository = "https://github.com/orbitalis-rs/orbitalis/tree/main/pilot"
license = "MIT"
keywords = [
  "Rust",
  "Ethereum",
  "Orbitalis",
  "Pilot",
  "REPL",
  "Solidity",
  "Solang",
]

[lib]
name = "pilot"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "pilot"
path = "src/bin/pilot.rs"

[dependencies]
# spark
orbitalis-evm = { path = "../evm" }
spark = { path = "../spark" }
orbitalis-config = { path = "../config" }
orbitalis-cli = { path = "../cli" }
orbitalis-common = { path = "../common" }
spark-fmt = { path = "../fmt" }

# corebc
corebc = { workspace = true }
corebc-ylem = { workspace = true, features = ["project-util", "full"]}

# async
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls"] }

# misc
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
rustyline = "11"
solang-parser.workspace = true
yansi = "0.5"
strum = { version = "0.25", features = ["derive"] }
serde = "1"
serde_json = { version = "1", features = ["raw_value"] }
semver = "1"
bytes = "1"
revm = { workspace = true, default-features = false, features = ["std", "serde", "memory_limit"] }
eyre = "0.6"
dirs = "5"
time = { version = "0.3", features = ["formatting"] }
regex = "1"

[dev-dependencies]
criterion = { version = "0.4", features = ["async_tokio"] }
serial_test = "2"
once_cell = "1"

[build-dependencies]
vergen = { version = "8", default-features = false, features = [
  "build",
  "git",
  "git2",
] }

[[bench]]
name = "session_source"
harness = false
