[package]
name = "spark"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
foxar-utils = { path = "./../utils" }
foxar-common = { path = "./../common" }
foxar-config = { path = "./../config" }
foxar-evm = { path = "./../evm" }

# TODO: Trim down
corebc = { workspace = true, features = ["ylem-full"]}

comfy-table = "6"
eyre = "0.6"
glob = "0.3"
hex = "0.4"
once_cell = "1"
parking_lot = "0.12"
proptest = "1"
rayon = "1"
regex = { version = "1", default-features = false }
rlp = "0.5"
semver = "1"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["time"] }
tracing = "0.1"
tracing-subscriber = "0.3"
yansi = "0.5"

[dev-dependencies]
corebc = { workspace = true, features = ["ylem-full", "ylem-tests", "rustls"]}
foxar-utils = { path = "./../utils" }
