[package]
name = "ui"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/foxar-rs/foxar"
keywords = ["ethereum", "web3", "evm", "debugger"]

[dependencies]
spark = { path = "../spark" }
foxar-common = { path = "../common" }

corebc = { workspace = true}

crossterm = "0.26"
eyre = "0.6"
hex = "0.4"
revm = { workspace = true, default-features = false, features = ["std", "serde", "memory_limit"] }
tui = { version = "0.19", default-features = false, features = ["crossterm"] }
