[package]
name = "orbitalis-cli-test-utils"
version = "0.1.0"
description = "Orbitalis CLI testing utilities"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/orbitalis-rs/orbitalis"

[dependencies]
orbitalis-config = { path = "../../config" }
orbitalis-common = { path = "../../common" }

corebc = { workspace = true}
corebc-ylem = { workspace = true, features = ["project-util"]}
corebc-addressbook = { workspace = true }

eyre = "0.6"
is-terminal = "0.4"
once_cell = "1"
parking_lot = "0.12"
pretty_assertions = "1"
regex = "1"
serde_json = "1"
tempfile = "3"
walkdir = "2"
